--- a/index.html
+++ b/index.html
@@ -201,28 +201,28 @@
 
                 <ul id="nav-menu" class="nav-smooth-scroll">
                     <li class="first-child">
-                        <a href="#main-slider">Trang chủ</a>
+                        <a href="#main-slider">HOME</a>
                     </li>
                     <li>
-                        <a href="#our-story">Câu chuyện</a>
+                        <a href="#our-story">STORY</a>
                     </li>
                     <li>
-                        <a href="#where-when">Ở đâu &amp; Khi nào</a>
+                        <a href="#where-when">WHERE &amp; WHEN</a>
                     </li>
                     <li>
-                        <a href="#gallery-section">Bộ sưu tập</a>
+                        <a href="#gallery-section">GALLERY</a>
                     </li>
                     <li class="first-child split-margin">
-                        <a href="#more-events">Sự kiện</a>
+                        <a href="#more-events">EVENTS</a>
                     </li>
                     <li>
-                        <a href="#groomsmen-section">Phù rể</a>
+                        <a href="#groomsmen-section">GROOMSMEN</a>
                     </li>
                     <li>
-                        <a href="#bridesmaid-section">Phù dâu</a>
+                        <a href="#bridesmaid-section">BRIDESMAID</a>
                     </li>
                     <li>
-                        <a href="#rsvp-section">Trả lời</a>
+                        <a href="#rsvp-section">RSVP</a>
                     </li>
 
                 </ul>
