--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="FOREVER - Responsive HTML Wedding Template">
     <meta name="author" content="www.dethemes.com">
     <META NAME="ROBOTS" CONTENT="NOINDEX">
-    <title>Tùng <3 Thúy</title>
+    <title>Đức Tùng <3 Phương Thúy</title>
 
     <link rel="icon" href="images/favicon.jpg">
     <!-- Bootstrap -->
@@ -137,13 +137,13 @@
                         <div class="col-md-offset-3 col-md-6 animation delay1 fadeInUp">
 
                             <div id="invited">
-                                You're Invited
+                                Chân trọng kính mời
                             </div>
                             <div class="banner-text withlove medium light">
-                                <h1>WE ARE GETTING MARRIED</h1>
+                                <h1>Tới dự Lễ Thành Hôn</h1>
                             </div>
                             <div id="banner-date">
-                                - DECEMBER / 19TH / 2016 -
+                                - Thứ 5 / 01 / 04 / 2021 -
                             </div>
 
                         </div>
@@ -162,7 +162,7 @@
         <li>
             <!-- SLIDE IMAGE -->
             <div data-stellar-ratio="0.5" class="slide-image"
-                 style="background-image:url(images/slide-image-1920-i.jpg); background-position:top center">
+                 style="background-image:url(images/slide-image-1920-i.jpg); background-position:center bottom">
             </div>
 
             <!-- SLIDE OVERLAY -->
@@ -253,7 +253,7 @@
                     <div class="photo-item frame-border animation fadeInLeft">
 
                         <!--PHOTO-->
-                        <img src="images/him2.jpg" alt="" class="hover-animation image-zoom-in">
+                        <img src="images/him2.jpg" alt="" class="hover-animation image-zoom-in" style="max-height: 650px;object-fit: cover;">
 
                         <!--PHOTO OVERLAY-->
                         <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -283,7 +283,7 @@
                     </div><!--END of PHOTO-ITEM-->
 
                     <div class="his-her-name">
-                        <h2 class="text-center">GERRARD<span class="last-name">-&nbsp;Leandro&nbsp;-</span></h2>
+                        <h2 class="text-center">Đức Tùng<span class="last-name">-&nbsp;Nguyễn&nbsp;-</span></h2>
                         <div class="heart-wrapper">
                             <div class="de-icon circle medium-size custom-heart">
                                 <i class="de-icon-heart"></i>
@@ -291,12 +291,12 @@
                         </div>
                     </div>
 
-                    <p class="blurb animation fadeInLeft text-center">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada ante quis
-                        pharetra. Nullam non bibendum dolor. Ut vel turpis accumsan, efficitur dolor fermentum,
-                        tincidunt metus. Etiam ut ultrices nibh. Etiam aliquam mauris non hendrerit faucibus. Proin
-                        pulvinar congue ex, vitae commodo. Phasellus condimentum, mi ut sodales gravida.
-                    </p>
+<!--                    <p class="blurb animation fadeInLeft text-center">-->
+<!--                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada ante quis-->
+<!--                        pharetra. Nullam non bibendum dolor. Ut vel turpis accumsan, efficitur dolor fermentum,-->
+<!--                        tincidunt metus. Etiam ut ultrices nibh. Etiam aliquam mauris non hendrerit faucibus. Proin-->
+<!--                        pulvinar congue ex, vitae commodo. Phasellus condimentum, mi ut sodales gravida.-->
+<!--                    </p>-->
 
                 </div>
 
@@ -306,7 +306,7 @@
                     <div class="photo-item frame-border animation fadeInRight">
 
                         <!--PHOTO-->
-                        <img src="images/her2.jpg" alt="" class="hover-animation image-zoom-in">
+                        <img src="images/her2.jpg" alt="" class="hover-animation image-zoom-in" style="max-height: 650px;object-fit: cover;">
 
                         <!--PHOTO OVERLAY-->
                         <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -336,15 +336,15 @@
                     </div><!--END of PHOTO-ITEM-->
 
                     <div class="his-her-name">
-                        <h2 class="text-center">DIANNE<span class="last-name">-&nbsp;Anna&nbsp;-</span></h2>
+                        <h2 class="text-center">Phương Thúy<span class="last-name">-&nbsp;Đỗ&nbsp;-</span></h2>
                     </div>
 
-                    <p class="blurb animation fadeInRight text-center">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada ante quis
-                        pharetra. Nullam non bibendum dolor. Ut vel turpis accumsan, efficitur dolor fermentum,
-                        tincidunt metus. Etiam ut ultrices nibh. Etiam aliquam mauris non hendrerit faucibus. Proin
-                        pulvinar congue ex, vitae commodo. Phasellus condimentum, mi ut sodales gravida.
-                    </p>
+<!--                    <p class="blurb animation fadeInRight text-center">-->
+<!--                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada ante quis-->
+<!--                        pharetra. Nullam non bibendum dolor. Ut vel turpis accumsan, efficitur dolor fermentum,-->
+<!--                        tincidunt metus. Etiam ut ultrices nibh. Etiam aliquam mauris non hendrerit faucibus. Proin-->
+<!--                        pulvinar congue ex, vitae commodo. Phasellus condimentum, mi ut sodales gravida.-->
+<!--                    </p>-->
 
                 </div>
             </div>
