--- a/index.html
+++ b/index.html
@@ -204,29 +204,29 @@
 
                 <ul id="nav-menu" class="nav-smooth-scroll">
                     <li class="first-child">
-                        <a href="#main-slider">HOME</a>
+                        <a href="#main-slider">Trang chủ</a>
                     </li>
                     <li>
-                        <a href="#our-story">STORY</a>
+                        <a href="#couple">Couple</a>
                     </li>
+                    <!-- <li>
+                        <a href="#where-when">Địa điểm</a>
+                    </li> -->
                     <li>
-                        <a href="#where-when">WHERE &amp; WHEN</a>
-                    </li>
-                    <li>
-                        <a href="#gallery-section">GALLERY</a>
+                        <a href="#our-story">Story</a>
                     </li>
                     <li class="first-child split-margin">
-                        <a href="#more-events">EVENTS</a>
+                        <a href="#where-when">Địa điểm</a>
                     </li>
                     <li>
-                        <a href="#groomsmen-section">GROOMSMEN</a>
+                        <a href="#gallery-section">Album</a>
                     </li>
                     <li>
-                        <a href="#bridesmaid-section">BRIDESMAID</a>
+                        <a href="#more-events">Sự kiện</a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a href="#rsvp-section">RSVP</a>
-                    </li>
+                    </li> -->
 
                 </ul>
 
@@ -356,7 +356,7 @@
 
     <!-- PHOTO DIVIDER -->
     <section id="photo-divider">
-        <div class="image-divider fixed-height" style="background-image:url(images/parallax-image-3.jpg); height:600px"
+        <div class="image-divider fixed-height couple-down" style="background-image:url(images/parallax-image-3.jpg); height:600px"
              data-stellar-background-ratio="0.3">
         </div>
     </section>
@@ -378,12 +378,12 @@
                             OUR <img src="images/heart-icon.png" alt=""> STORY
                         </h2>
 
-                        <p>
+                        <!-- <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada ante
                             quis pharetra. Nullam notn bibendum dolor. Ut vel turpis accumsan, efficitur dolor
                             fermentum, tincidunt metus. Etiam ut ultrices nibh. Etiam aliquam mauris non hendrerit
                             faucibus. Proin pulvinar congue ex, vitae
-                        </p>
+                        </p> -->
 
 
                     </div>
@@ -615,7 +615,7 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <div id="end-of-story" class="animation fadeInUp">
-                        <h2>AND TODAY... WE ARE GETTING MARRIED</h2>
+                        <h2>Và hôm nay ... chúng tôi sắp kết hôn</h2>
                         <div class="heart-divider">
                             <span class="grey-line"></span>
                             <i class="de-icon-heart pink-heart"></i>
@@ -1287,7 +1287,7 @@
 
 <!-- FOOTER SECTION -->
 <footer>
-    <div class="image-divider fixed-height" style="background-image:url(images/slide-image-1920-h.jpg);"
+    <div class="image-divider fixed-height img-thanks" style="background-image:url(images/slide-image-1920-h.jpg);"
          data-stellar-background-ratio="0.5">
 
         <div class="divider-overlay"></div>
