--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
 
                     <div class="section-title animation fadeInUp">
                         <h2>
-                            OUR <img src="images/heart-icon.png" alt=""> STORY
+                            STORY <img src="images/heart-icon.png" alt=""> 
                         </h2>
 
                         <!-- <p>
@@ -399,7 +399,7 @@
                     <div class="photo-item frame-border animation delay1 fadeInLeft">
 
                         <!--PHOTO-->
-                        <img src="images/gallery-1.jpg" alt="" class="hover-animation image-zoom-in">
+                        <img src="images/IMG_0183.jpg" alt="" class="hover-animation image-zoom-in">
 
                         <!--PHOTO OVERLAY-->
                         <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -410,7 +410,7 @@
                             <div class="alignment">
                                 <div class="v-align center-middle">
 
-                                    <a href="images/attachment-1.jpg" class="magnific-zoom" title="Our First Met">
+                                    <a href="images/IMG_0183.jpg" class="magnific-zoom" title="Our First Met">
                                         <div class="de-icon circle light medium-size inline">
                                             <i class="de-icon-zoom-in"></i>
                                         </div>
@@ -426,19 +426,19 @@
                 <div class="col-sm-12 col-md-2 text-center story-date-wrapper animation fadeIn">
                     <div class="arrow-left"></div>
                     <div class="story-date">
-                        <div class="date-only">23</div>
-                        <div class="month-year">03.12</div>
+                        <div class="date-only">2014</div>
+                        <!-- <div class="month-year">2014</div> -->
                     </div>
                     <div class="arrow-right"></div>
                     <div class="clearboth"></div>
                 </div>
 
                 <div class="col-sm-12 col-md-4 animation delay1 fadeInRight">
-                    <h3>OUR FIRST MET</h3>
+                    <!-- <h3>OUR FIRST MET</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada ante quis
                         pharetra. Nullam notn bibendum dolor. Ut vel turpis accumsan, efficitur dolor fermentum,
                         tincidunt metus. Etiam ut ultrices nibh. Etiam aliquam mauris non hendrerit faucibus. Proin
-                        pulvinar congue ex, vitae commodo. Phasellus condimentum, mi ut sodales gravida.</p>
+                        pulvinar congue ex, vitae commodo. Phasellus condimentum, mi ut sodales gravida.</p> -->
                 </div>
 
                 <div class="vertical-line">
@@ -454,7 +454,7 @@
                     <div class="photo-item frame-border animation delay1 fadeInLeft">
 
                         <!--PHOTO-->
-                        <img src="images/gallery-9.jpg" alt="" class="hover-animation image-zoom-in">
+                        <img src="images/IMG_0187.jpg" alt="" class="hover-animation image-zoom-in">
 
                         <!--PHOTO OVERLAY-->
                         <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -465,7 +465,7 @@
                             <div class="alignment">
                                 <div class="v-align center-middle">
 
-                                    <a href="images/attachment-9.jpg" class="magnific-zoom" title="Our First Dating">
+                                    <a href="images/IMG_0187.jpg" class="magnific-zoom" title="Our First Dating">
                                         <div class="de-icon circle light medium-size inline">
                                             <i class="de-icon-zoom-in"></i>
                                         </div>
@@ -481,19 +481,19 @@
                 <div class="col-sm-12 col-md-2 text-center story-date-wrapper animation fadeIn">
                     <div class="arrow-left"></div>
                     <div class="story-date">
-                        <div class="date-only">19</div>
-                        <div class="month-year">06.12</div>
+                        <div class="date-only">2016</div>
+                        <!-- <div class="month-year">06.12</div> -->
                     </div>
                     <div class="arrow-right"></div>
                     <div class="clearboth"></div>
                 </div>
 
                 <div class="col-sm-12 col-md-4 col-md-pull-6 animation delay1 fadeInRight">
-                    <h3>OUR FIRST DATING</h3>
+                    <!-- <h3>OUR FIRST DATING</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada ante quis
                         pharetra. Nullam notn bibendum dolor. Ut vel turpis accumsan, efficitur dolor fermentum,
                         tincidunt metus. Etiam ut ultrices nibh. Etiam aliquam mauris non hendrerit faucibus. Proin
-                        pulvinar congue ex, vitae commodo. Phasellus condimentum, mi ut sodales gravida.</p>
+                        pulvinar congue ex, vitae commodo. Phasellus condimentum, mi ut sodales gravida.</p> -->
                 </div>
 
                 <div class="vertical-line">
@@ -509,7 +509,7 @@
                     <div class="photo-item frame-border animation delay1 fadeInLeft">
 
                         <!--PHOTO-->
-                        <img src="images/gallery-2.jpg" alt="" class="hover-animation image-zoom-in">
+                        <img src="images/IMG_0353.jpg" alt="" class="hover-animation image-zoom-in">
 
                         <!--PHOTO OVERLAY-->
                         <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -520,7 +520,7 @@
                             <div class="alignment">
                                 <div class="v-align center-middle">
 
-                                    <a href="images/attachment-2.jpg" class="magnific-zoom" title="He Proposed">
+                                    <a href="images/IMG_0353.jpg" class="magnific-zoom" title="He Proposed">
                                         <div class="de-icon circle light medium-size inline">
                                             <i class="de-icon-zoom-in"></i>
                                         </div>
@@ -536,19 +536,19 @@
                 <div class="col-md-2 text-center story-date-wrapper animation fadeIn">
                     <div class="arrow-left"></div>
                     <div class="story-date">
-                        <div class="date-only">12</div>
-                        <div class="month-year">09.14</div>
+                        <div class="date-only">2018</div>
+                        <!-- <div class="month-year">09.14</div> -->
                     </div>
                     <div class="arrow-right"></div>
                     <div class="clearboth"></div>
                 </div>
 
                 <div class="col-md-4 animation delay1 fadeInRight">
-                    <h3>HE PROPOSED</h3>
+                    <!-- <h3>HE PROPOSED</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada ante quis
                         pharetra. Nullam notn bibendum dolor. Ut vel turpis accumsan, efficitur dolor fermentum,
                         tincidunt metus. Etiam ut ultrices nibh. Etiam aliquam mauris non hendrerit faucibus. Proin
-                        pulvinar congue ex, vitae commodo. Phasellus condimentum, mi ut sodales gravida.</p>
+                        pulvinar congue ex, vitae commodo. Phasellus condimentum, mi ut sodales gravida.</p> -->
 
                 </div>
 
@@ -565,7 +565,7 @@
                     <div class="photo-item frame-border animation delay1 fadeInLeft">
 
                         <!--PHOTO-->
-                        <img src="images/gallery-3.jpg" alt="" class="hover-animation image-zoom-in">
+                        <img src="images/IMG_7399.jpg" alt="" class="hover-animation image-zoom-in">
 
                         <!--PHOTO OVERLAY-->
                         <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -576,7 +576,7 @@
                             <div class="alignment">
                                 <div class="v-align center-middle">
 
-                                    <a href="images/attachment-3.jpg" class="magnific-zoom" title="Love Ring">
+                                    <a href="images/IMG_7399.jpg" class="magnific-zoom" title="Love Ring">
                                         <div class="de-icon circle light medium-size inline">
                                             <i class="de-icon-zoom-in"></i>
                                         </div>
@@ -592,19 +592,19 @@
                 <div class="col-sm-12 col-md-2 text-center story-date-wrapper animation fadeIn">
                     <div class="arrow-left"></div>
                     <div class="story-date">
-                        <div class="date-only">19</div>
-                        <div class="month-year">10.14</div>
+                        <div class="date-only">2020</div>
+                        <!-- <div class="month-year">10.14</div> -->
                     </div>
                     <div class="arrow-right"></div>
                     <div class="clearboth"></div>
                 </div>
 
                 <div class="col-sm-12 col-md-4 col-md-pull-6 animation delay1 fadeInRight">
-                    <h3>LOVE RING</h3>
+                    <!-- <h3>LOVE RING</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada ante quis
                         pharetra. Nullam notn bibendum dolor. Ut vel turpis accumsan, efficitur dolor fermentum,
                         tincidunt metus. Etiam ut ultrices nibh. Etiam aliquam mauris non hendrerit faucibus. Proin
-                        pulvinar congue ex, vitae commodo. Phasellus condimentum, mi ut sodales gravida.</p>
+                        pulvinar congue ex, vitae commodo. Phasellus condimentum, mi ut sodales gravida.</p> -->
                 </div>
 
                 <div class="vertical-line">
@@ -615,7 +615,7 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <div id="end-of-story" class="animation fadeInUp">
-                        <h2>Và hôm nay ... chúng tôi sắp kết hôn</h2>
+                        <h2>Và ngày đó ... cũng sắp đến</h2>
                         <div class="heart-divider">
                             <span class="grey-line"></span>
                             <i class="de-icon-heart pink-heart"></i>
@@ -1185,7 +1185,7 @@
                             <div class="photo-item animation fadeIn">
 
                                 <!--PHOTO-->
-                                <img src="images/event-2.jpg" alt="" class="hover-animation image-zoom-in">
+                                <img src="images/event-1.jpg" alt="" class="hover-animation image-zoom-in">
 
                                 <!--PHOTO OVERLAY-->
                                 <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -1234,7 +1234,7 @@
                             <div class="photo-item animation fadeIn">
 
                                 <!--PHOTO-->
-                                <img src="images/event-2.jpg" alt="" class="hover-animation image-zoom-in">
+                                <img src="images/event-1.jpg" alt="" class="hover-animation image-zoom-in">
 
                                 <!--PHOTO OVERLAY-->
                                 <div class="layer wh100 hidden-black-overlay hover-animation fade-in">
