--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
 
                     <div class="section-title animation fadeInUp">
                         <h2>
-                            STORY <img src="images/heart-icon.png" alt=""> 
+                            <img src="images/heart-icon.png" alt="">  Story <img src="images/heart-icon.png" alt=""> 
                         </h2>
 
                         <!-- <p>
@@ -747,7 +747,7 @@
     </section> -->
 
     <!-- GALLERY SECTION -->
-    <section id="gallery-section">
+    <section id="gallery-section" style="padding-top: 0 !important;">
 
         <div class="container">
 
