--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta name="description" content="FOREVER - Responsive HTML Wedding Template">
+    <meta name="description" content="Đám cưới: Đức Tùng & Phương Thúy">
     <meta name="author" content="www.dethemes.com">
     <META NAME="ROBOTS" CONTENT="NOINDEX">
-    <title>Đức Tùng <3 Phương Thúy</title>
+    <title>Đám cưới: Đức Tùng & Phương Thúy</title>
 
     <link rel="icon" href="images/favicon.jpg">
     <!-- Bootstrap -->
