--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="utf-8">
       <meta content="width=device-width, initial-scale=1.0" name="viewport">
-      <meta name="description" content="Đám cưới: Đức Tùng & Phương Thúy">
+      <meta name="description" content="Thông tin chi tiết về đám cưới Đức Tùng và Phương Thúy">
       <meta name="author" content="www.dethemes.com">
       <META NAME="ROBOTS" CONTENT="NOINDEX">
       <title>Đám cưới: Đức Tùng & Phương Thúy</title>
