--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta charset="utf-8">
       <meta content="width=device-width, initial-scale=1.0" name="viewport">
       <meta name="description" content="Thông tin chi tiết về đám cưới Đức Tùng và Phương Thúy">
-      <meta property="og:image" content="https://nductung.github.io/images/gallery-4.jpg" />
+      <meta property="image" content="https://nductung.github.io/images/gallery-4.jpg" />
       <META NAME="ROBOTS" CONTENT="NOINDEX">
       <title>Đám cưới: Đức Tùng & Phương Thúy</title>
       <link rel="icon" href="images/favicon.jpg">
