--- a/index.html
+++ b/index.html
@@ -277,8 +277,8 @@
                <!--PHOTO-ITEM-->
                <div class="photo-item frame-border animation delay1 fadeInLeft">
                   <!--PHOTO-->
-                  <img src="images/IMG_0183.jpg" alt="" class="hover-animation image-zoom-in"
-                       style="transition: none 0s ease 0s;">
+                  <img src="images/IMG_0183.jpg" alt="" class="hover-animation image-zoom-in img-story"
+                       style="transition: none 0s ease 0s;object-fit: unset;">
                   <!--PHOTO OVERLAY-->
                   <div class="layer wh100 hidden-black-overlay hover-animation fade-in"
                        style="transition: none 0s ease 0s;">
@@ -307,7 +307,7 @@
                <div class="story-date">
                   <div class="date-only">2014</div>
                </div>
-               <div class="arrow-right"></div>
+               <div class="arrow-right" style="opacity: 0;"></div>
                <div class="clearboth"></div>
             </div>
             <div class="col-sm-12 col-md-4 animation delay1 fadeInRight"></div>
@@ -320,7 +320,7 @@
                <!--PHOTO-ITEM-->
                <div class="photo-item frame-border animation delay1 fadeInLeft">
                   <!--PHOTO-->
-                  <img src="images/IMG_0187.jpg" alt="" class="hover-animation image-zoom-in"
+                  <img src="images/IMG_0187.jpg" alt="" class="hover-animation image-zoom-in img-story"
                        style="transition: none 0s ease 0s;">
                   <!--PHOTO OVERLAY-->
                   <div class="layer wh100 hidden-black-overlay hover-animation fade-in"
@@ -346,7 +346,7 @@
                <!--END of PHOTO-ITEM-->
             </div>
             <div class="col-sm-12 col-md-2 text-center story-date-wrapper animation fadeIn">
-               <div class="arrow-left"></div>
+               <div class="arrow-left" style="opacity: 0;"></div>
                <div class="story-date">
                   <div class="date-only">2016</div>
                </div>
@@ -363,7 +363,7 @@
                <!--PHOTO-ITEM-->
                <div class="photo-item frame-border animation delay1 fadeInLeft">
                   <!--PHOTO-->
-                  <img src="images/IMG_0353.jpg" alt="" class="hover-animation image-zoom-in"
+                  <img src="images/IMG_0353.jpg" alt="" class="hover-animation image-zoom-in img-story"
                        style="transition: none 0s ease 0s;">
                   <!--PHOTO OVERLAY-->
                   <div class="layer wh100 hidden-black-overlay hover-animation fade-in"
@@ -393,7 +393,7 @@
                <div class="story-date">
                   <div class="date-only">2018</div>
                </div>
-               <div class="arrow-right"></div>
+               <div class="arrow-right" style="opacity: 0;"></div>
                <div class="clearboth"></div>
             </div>
             <div class="col-md-4 animation delay1 fadeInRight"></div>
@@ -406,8 +406,8 @@
                <!--PHOTO-ITEM-->
                <div class="photo-item frame-border animation delay1 fadeInLeft">
                   <!--PHOTO-->
-                  <img src="images/IMG_7399.jpg" alt="" class="hover-animation image-zoom-in"
-                       style="transition: none 0s ease 0s;">
+                  <img src="images/IMG_7399.jpg" alt="" class="hover-animation image-zoom-in img-story"
+                       style="transition: none 0s ease 0s;object-position: bottom;">
                   <!--PHOTO OVERLAY-->
                   <div class="layer wh100 hidden-black-overlay hover-animation fade-in"
                        style="transition: none 0s ease 0s;">
@@ -432,7 +432,7 @@
                <!--END of PHOTO-ITEM-->
             </div>
             <div class="col-sm-12 col-md-2 text-center story-date-wrapper animation fadeIn">
-               <div class="arrow-left"></div>
+               <div class="arrow-left" style="opacity: 0;"></div>
                <div class="story-date">
                   <div class="date-only">2020</div>
                </div>
