--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
    <meta charset="utf-8">
    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-   <meta name="description" content="Thông tin chi tiết về đám cưới Đức Tùng và Phương Thúy">
-   <meta name="image" content="https://nductung.github.io/images/gallery-4.jpg">
+   <meta name="ROBOTS" CONTENT="NOINDEX">
+   <meta property="og:title" content="Đám cưới: Đức Tùng & Phương Thúy" />
+   <meta property="og:description" content="Thông tin chi tiết về đám cưới Đức Tùng và Phương Thúy" />
    <meta property="og:image" content="https://nductung.github.io/images/gallery-4.jpg">
-   <META NAME="ROBOTS" CONTENT="NOINDEX">
-   <title>Đám cưới: Đức Tùng & Phương Thúy</title>
    <link rel="icon" href="images/favicon.jpg">
    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" type="text/css" media="screen" />
    <link rel="stylesheet" href="css/preloader.css" media="screen">
@@ -23,6 +22,7 @@
    <link href='css/family/oswald.css' rel='stylesheet' type='text/css'>
    <link href='css/family/pacifico.css' rel='stylesheet' type='text/css'>
    <link href="css/style.css" rel="stylesheet" media="screen">
+
 </head>
 <body class="outside-bottom-bar-page">
 <!--PRELOADER-->
