--- a/index.html
+++ b/index.html
@@ -712,7 +712,7 @@
                   <div class="layer wh100 hidden-link hover-animation delay1 fade-in">
                      <div class="alignment">
                         <div class="v-align center-middle">
-                           <a href="images/attachment-7.jpg" class="magnific-zoom-gallery" title="Attachment-7">
+                           <a href="images/gallery-7.jpg" class="magnific-zoom-gallery" title="Attachment-7">
                               <div class="de-icon circle light medium-size inline">
                                  <i class="de-icon-zoom-in"></i>
                               </div>
@@ -740,7 +740,7 @@
                   <div class="layer wh100 hidden-link hover-animation delay1 fade-in">
                      <div class="alignment">
                         <div class="v-align center-middle">
-                           <a href="images/attachment-6.jpg" class="magnific-zoom-gallery" title="Attachment-8">
+                           <a href="images/gallery-6.jpg" class="magnific-zoom-gallery" title="Attachment-8">
                               <div class="de-icon circle light medium-size inline">
                                  <i class="de-icon-zoom-in"></i>
                               </div>
@@ -927,7 +927,7 @@
 </section>
 <!-- FOOTER SECTION -->
 <footer>
-   <div class="image-divider fixed-height img-thanks" style="background-image:url(images/slide-image-1920-h.jpg);"
+   <div class="image-divider fixed-height img-thanks" style="background-image:url(images/gallery-7.jpg);"
         data-stellar-background-ratio="0.5">
       <div class="divider-overlay"></div>
       <!-- Use Center Middle Alignment to align middle the content for fixed-height parallax -->
