--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
    <meta property="og:title" content="Đám cưới: Đức Tùng & Phương Thúy" />
    <meta property="og:description" content="Thông tin chi tiết về đám cưới Đức Tùng và Phương Thúy" />
    <meta property="og:image" content="https://nductung.github.io/images/IMG_7369.jpg">
+   <meta property="twitter:image" content="https://nductung.github.io/images/IMG_7369.jpg">
    <link rel="icon" href="images/favicon.jpg">
    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" type="text/css" media="screen" />
    <link rel="stylesheet" href="css/preloader.css" media="screen">
