--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
    <link href='css/family/oswald.css' rel='stylesheet' type='text/css'>
    <link href='css/family/pacifico.css' rel='stylesheet' type='text/css'>
    <link href="css/style.css" rel="stylesheet" media="screen">
-
 </head>
 <body class="outside-bottom-bar-page">
 <!--PRELOADER-->
@@ -1007,6 +1006,7 @@
 <script type="text/javascript" src="js/map-script.js"></script>
 <!-- Custom Additional Script -->
 <script type="text/javascript" src="js/main-slider-fade.js"></script>
+<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCkVk-vL6FRXFA5BWjpjyR0tS1M54hlWhE"></script>
 </body>
 </html>
 <!--       _
