--- a/index.html
+++ b/index.html
@@ -1006,7 +1006,7 @@
 <script type="text/javascript" src="js/map-script.js"></script>
 <!-- Custom Additional Script -->
 <script type="text/javascript" src="js/main-slider-fade.js"></script>
-<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCkVk-vL6FRXFA5BWjpjyR0tS1M54hlWhE"></script>
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDj2QuD0yW1Kk3t_lgToAQkbdjjpGHVYho&amp;v=3.exp&amp;language=en"></script>
 </body>
 </html>
 <!--       _
