--- a/index.html
+++ b/index.html
@@ -507,7 +507,8 @@
          <!-- ROW-3 -->
          <div class="row">
             <div class="col-md-12 animation fadeIn">
-               <div id="map-canvas" style="border:15px solid #FFF; margin-top:20px;"></div>
+               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1875.1479950254009!2d105.46183284511619!3d19.954050710714373!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3136eb25df7cc997%3A0x6e3aa141decf10e5!2zQ-G7rWEgaMOgbmcgQ8av4bucTkcgVEjGoE0!5e0!3m2!1svi!2s!4v1616035250845!5m2!1svi!2s" width="100%" height="460" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+               <!-- <div id="map-canvas" style="border:15px solid #FFF; margin-top:20px;"></div> -->
             </div>
          </div>
          <!-- END of ROW-3 -->
@@ -997,14 +998,13 @@
 <!-- Owl Carousel -->
 <script src="js/owlcarousel/owl.carousel.js"></script>
 <!-- Google Map -->
-<!-- <script src="https://maps.googleapis.com/maps/api/js"></script> -->
-<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCkiVCO66G8DVCLJ_qIg_CzT3o5gInIJek"></script>
+<script src="https://maps.googleapis.com/maps/api/js"></script>
 <script src="js/markerlabel/markerwithlabel.js"></script>
 <!-- RSVP -->
 <script src="js/rsvp/rsvp.js"></script>
 <!-- Custom Core Script -->
 <script type="text/javascript" src="js/script.js"></script>
-<script type="text/javascript" src="js/map-script.js"></script>
+<!-- <script type="text/javascript" src="js/map-script.js"></script> -->
 <!-- Custom Additional Script -->
 <script type="text/javascript" src="js/main-slider-fade.js"></script>
 </body>
