--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                <div class="row">
                   <div class="col-md-offset-3 col-md-6 animation delay1 fadeInUp">
                      <div id="invited">
-                        Chân trọng kính mời <br> Anh, chị, em, bạn bè & người thân
+                        Trân trọng kính mời <br> Anh, chị, em, bạn bè & người thân
                      </div>
                      <div class="banner-text withlove medium light">
                         <h1>Tới dự Lễ Thành Hôn</h1>
