--- a/index.html
+++ b/index.html
@@ -849,7 +849,7 @@
                      <!-- TITLE & EXCERPT -->
                      <div class="title-excerpt animation fadeIn">
                         <h3><a href="#">Lễ nạp tài</a></h3>
-                        <p>Vào hồi 9 giờ 00' ngày 30/03/2021 <br>
+                        <p class="event-description-1">Vào hồi 9 giờ 00' ngày 30/03/2021 <br>
                            (Tức ngày 18 tháng 02 năm Tân Sửu)
                         </p>
                      </div>
