--- a/index.html
+++ b/index.html
@@ -1,25 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="google-site-verification" content="SISt-mKn27ag6yW_ippYgRYCuSC6wK4IBtmGh2nsTqA" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blockodyssey</title>
-</head>
-<body>
-    <h1>Blockodyssey - Organization Information</h1>
-    <p><strong>Account ID:</strong> 4845357463085974217</p>
-    <p><strong>Developer Name:</strong> Blockodyssey Labs</p>
-    <p><strong>Company Name:</strong> Blockodyssey</p>
-    <p><strong>Organization Details:</strong> Your organization name, address, and D-U-N-S number are taken from the Google payments profile</p>
-    <p><strong>Registry:</strong> Dun & Bradstreet</p>
-    <p><strong>D-U-N-S Number:</strong> 695036925</p>
-    <p><strong>Organization Name:</strong> 블록오디세이 (Blockodyssey)</p>
-    <p><strong>Organization Address:</strong> 32-13, Jungang Commercial Road, 7th Floor, 701-13 (Angel Free Zone),<br> 
-       Ochang-eup, Cheongwon-gu, Cheongju - 28119, South Korea (KR)</p>
-    <p><strong>Organization Type:</strong> A company or business</p>
-    <p><strong>Organization Size:</strong> 11 - 100</p>
-    <p><strong>Organization Phone Number:</strong> +82 2 2088 6042</p>
-    <p><strong>Organization Website:</strong> <a href="https://www.blockodyssey.io" target="_blank">www.blockodyssey.io</a></p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Processing Payment - Hecto Financial</title>
+    <style>
+      body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        background-color: #f4f4f4;
+        font-family: Arial, sans-serif;
+      }
+      .loading-container {
+        text-align: center;
+      }
+      .spinner {
+        width: 50px;
+        height: 50px;
+        border: 5px solid #ccc;
+        border-top: 5px solid #ff6114;
+        border-radius: 50%;
+        animation: spin 1s linear infinite;
+        margin: 20px auto;
+      }
+      @keyframes spin {
+        0% {
+          transform: rotate(0deg);
+        }
+        100% {
+          transform: rotate(360deg);
+        }
+      }
+      .message {
+        font-size: 18px;
+        color: #333;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="loading-container">
+      <div class="spinner"></div>
+    </div>
+  </body>
 </html>
