--- a/index.html
+++ b/index.html
@@ -1,47 +1,64 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Processing Payment - Hecto Financial</title>
+<html lang="vi">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Loading với POST Request</title>
     <style>
-      body {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        background-color: #f4f4f4;
-        font-family: Arial, sans-serif;
-      }
-      .loading-container {
-        text-align: center;
-      }
-      .spinner {
-        width: 50px;
-        height: 50px;
-        border: 5px solid #ccc;
-        border-top: 5px solid #ff6114;
-        border-radius: 50%;
-        animation: spin 1s linear infinite;
-        margin: 20px auto;
-      }
-      @keyframes spin {
-        0% {
-          transform: rotate(0deg);
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding: 20px;
         }
-        100% {
-          transform: rotate(360deg);
+        .loading {
+            display: none;
+            font-size: 18px;
+            color: blue;
         }
-      }
-      .message {
-        font-size: 18px;
-        color: #333;
-      }
     </style>
-  </head>
-  <body>
-    <div class="loading-container">
-      <div class="spinner"></div>
-    </div>
-  </body>
+</head>
+<body>
+
+    <h2>Gửi Request POST với Loading</h2>
+    <button onclick="sendPostRequest()">Gửi</button>
+    <p class="loading" id="loading">Đang gửi dữ liệu...</p>
+    <p id="response"></p>
+
+    <script>
+        function sendPostRequest() {
+            const loadingElement = document.getElementById("loading");
+            const responseElement = document.getElementById("response");
+
+            // Hiển thị loading
+            loadingElement.style.display = "block";
+            responseElement.innerHTML = "";
+
+            // Dữ liệu giả lập gửi lên server
+            const data = {
+                name: "Người dùng",
+                email: "email@example.com"
+            };
+
+            fetch("https://jsonplaceholder.typicode.com/posts", {
+                method: "POST",
+                headers: {
+                    "Content-Type": "application/json"
+                },
+                body: JSON.stringify(data)
+            })
+            .then(response => response.json())
+            .then(data => {
+                responseElement.innerHTML = "Phản hồi từ server: " + JSON.stringify(data);
+            })
+            .catch(error => {
+                responseElement.innerHTML = "Lỗi: " + error.message;
+            })
+            .finally(() => {
+                // Ẩn loading sau khi request hoàn tất
+                loadingElement.style.display = "none";
+            });
+        }
+    </script>
+
+</body>
 </html>
